[package]
name = "zephyrj-automation-tools"
version = "0.4.4-alpha"
edition = "2021"
authors = ["zephyrj <zephyrj@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
sha2 = "0.10"
bincode = "1.3.3"
serde = {version = "1.0", features = ["derive"] }
directories = "5.0.1"

[target.'cfg(target_os = "windows")'.dependencies]
whoami = "1.5.2"

[dependencies.rusqlite]
version = "0.32.1"
features = ["bundled"]
